[gd_scene load_steps=3 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=3]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 512.0
margin_bottom = 300.0
color = Color( 0.133333, 0.235294, 0.321569, 1 )

[node name="Holder" type="Label" parent="."]
margin_right = 512.0
margin_bottom = 300.0
theme = ExtResource( 3 )
align = 1

[node name="BeginButton" type="Button" parent="Holder"]
margin_left = 229.0
margin_top = 187.0
margin_right = 294.0
margin_bottom = 202.0
focus_neighbour_top = NodePath("../CreditsButton")
text = "Begin"

[node name="ControlsButton" type="Button" parent="Holder"]
margin_left = 229.0
margin_top = 211.0
margin_right = 294.0
margin_bottom = 226.0
text = "Controls"

[node name="SettingsButton" type="Button" parent="Holder"]
margin_left = 229.0
margin_top = 235.0
margin_right = 294.0
margin_bottom = 250.0
text = "Settings"

[node name="CreditsButton" type="Button" parent="Holder"]
margin_left = 229.0
margin_top = 260.0
margin_right = 294.0
margin_bottom = 275.0
focus_neighbour_bottom = NodePath("../BeginButton")
text = "Credits"

[node name="Pointer" type="Sprite" parent="Holder"]

[node name="Label" type="Label" parent="Holder"]
margin_left = 170.0
margin_top = 117.0
margin_right = 354.0
margin_bottom = 156.0
text = "Entwined Time

A two time manipulation puzzle game"
align = 1
valign = 1
